fix: island button overlaping song name

--- a/public/style.css
+++ b/public/style.css
@@ -959,6 +959,7 @@ body {
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    padding-right: 76px;
 }
 
 .island-expanded #track-title {
